@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-19T01:16:08Z",
+  "timestamp" : "2025-12-19T12:32:14Z",
   "count_outdated" : 10162,
   "uniques_outdated" : 5132,
-  "count" : 10232,
-  "uniques" : 5186,
+  "count" : 10233,
+  "uniques" : 5187,
   "clones" : [
     {
       "timestamp": "2025-12-05T00:00:00Z",
@@ -124,6 +124,15 @@
     },
     {
       "timestamp": "2025-12-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-19T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
