@@ -1,6 +1,6 @@
 {
-  "count": 70,
-  "uniques": 51,
+  "count": 71,
+  "uniques": 52,
   "clones": [
     {
       "timestamp": "2025-12-05T00:00:00Z",
@@ -69,6 +69,11 @@
     },
     {
       "timestamp": "2025-12-18T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-12-19T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
